--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+  "@tailwindcss/vite":"^4.1.12",
     "vite": "^7.1.4"
   }
 }
