--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
 
-VITE_API_BASE_URL=https://backend-21-2fu1.onrender.com
+API_BASE_URL=https://backend-21-2fu1.onrender.com
 VITE_PRODUCTION_API_URL=https://backend.com
+
