--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
-
+VITE_API_BASE_URL=https://backend-21-2fu1.onrender.com
 API_BASE_URL=https://backend-21-2fu1.onrender.com
 PRODUCTION_API_URL=https://backend.com
+
 
 
